--- a/style1.css
+++ b/style1.css
@@ -6,7 +6,7 @@
         color: white;
       }
 
-      /* Navbar */
+
       .navbar {
         display: flex;
         justify-content: space-between;
@@ -66,7 +66,7 @@
         cursor: pointer;
       }
 
-      /* Hero */
+      
       .hero {
         height: 500px;
         display: flex;
@@ -75,7 +75,7 @@
         color: white;
         background-size: cover;
         background-position: center;
-        margin-top: 70px; /* space for navbar */
+        margin-top: 70px; 
       }
 
       .hero-content {
@@ -85,7 +85,7 @@
         max-width: 500px;
       }
 
-      /* Movies */
+      
       .movies {
         margin: 20px;
       }
